More alignment fixes. Replaced padding with margin. Removed unnessecary flex containers

--- a/blog.css
+++ b/blog.css
@@ -10,29 +10,33 @@ body {
     font-family: Verdana, Arial, sans-serif;
 }
 
-a{
+a {
     color:#ffffff;
 }
 
 .hero {
     display:flex;
     height:12em;
+    align-items: center;
     /* DO NOT CHANGE THESE */
     background-color: #444444;
 }
+
 .hero h1 {
     flex-basis: 30%;
-    align-self: center;
-    display:flex;
-    justify-content: flex-end;
+    margin-left:6em;
     /* DO NOT CHANGE THESE */
     color: #ffffff;
 }
 
-.hero li{
+.hero ul {
     list-style: none;
+}
+
+.hero li{
+    margin-right:1em;
     display:inline;
-    padding-right:1em;
+
 }
 
 .hero a {
@@ -44,7 +48,7 @@ a{
     display:flex;
     justify-content: flex-end;
     align-self:flex-end;
-    padding-bottom:1em;
+    margin-bottom:1em;
 }
 
 
@@ -77,7 +81,6 @@ a{
 
 .sidebar {
     flex:0 0 15%;
-    padding:.5em;
     display:flex;
     flex-direction:column;
     /* DO NOT CHANGE THESE */
@@ -86,8 +89,8 @@ a{
 }
 
 .sidebar section {
+    flex:0 0 15%;
     margin:2em .5em;
-    padding:1em 0;
     /* DO NOT CHANGE THESE */
     background-color: #dddddd;
     border: 1px solid #444444;
@@ -113,10 +116,10 @@ footer nav {
     align-self: center;
 }
 
-footer ul{
+footer ul {
     margin-left:3em;
 }
 
-footer p{
+footer p {
     margin-top:2em;
 }
